changed fetch location

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             option: optionValue,
           });
 
-          fetch("http://localhost:5519/motor", {
+          fetch("https://g374xrbf-5519.inc1.devtunnels.ms/motor", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
