--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Slider and Radio Button</title>
+    <title>Smart IV System</title>
   </head>
   <body>
     <h1 class="heading1">SMART IV SYSTEM</h1>
@@ -33,7 +33,7 @@
       <br />
 
       <label for = "time" id = "duration">Duration: </label>
-      <input type="time" id="time-input" name="time" step="1">
+      <input type="time" id="time-input" name="time" step="1" value:"00:00:00">
       <br />
 
       <label for="Forward">Forward:</label>
